--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delete-workflow-runs",
+  "name": "delete-workflows-run",
   "version": "1.0.0",
   "description": "The GitHub action to delete workflow runs in a repository.",
   "main": "lib/index.js",
